# Basic_SSL_VPN

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.md.orig  client.c  server.c  simpletun.c  simpletun_udp  simpletun_udp.c  simpletun_udp_no_encryption  simpletun_udpv1  tun1.sh
presentation_slides/: projekt-slides.pptx
simpletun_encryption_udp/: Makefile  README.txt  client.c  client.h  common.h  parse_input.c  parse_input.h  server.c  server.h  simpletun_encryption_udp  simpletun_encryption_udp.c  simpletun_encryption_udp.h  ssl_util.c  ssl_util.h  tun.sh  tunnel_util.c  tunnel_util.h  util.c  util.h
simpletun_encryption_udp/certs_and_keys/: ca.crt  ca.key  client.crt  client.csr  client.key  fake_ca.crt  fake_ca.key  server.csr  server.key
simpletun_encryption_udp/certs_and_keys/demoCA/: index.txt  index.txt.old
simpletun_encryption_udp/certs_and_keys/demoCA/newcerts/: 1000.pem
simpletun_no_encryption_udp/: Makefile  simpletun_udp_no_encryption.c
simpletun_original/: Makefile  simpletun  simpletun.c
ssl/: ca.crt  ca.key  client.crt  client.csr  client.key  openssl.cnf  server.crt  server.csr  server.key
ssl/demoCA/: index.txt  index.txt.old
